--- a/Rmarkdown/current_pipeline/ligand_receptor_interactome.Rmd
+++ b/Rmarkdown/current_pipeline/ligand_receptor_interactome.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Single Nuclei vs Single cells (non-depleted) -- Normal tissue, 2 patients"
+title: "Single-cell and single-nucleus RNA-sequencing of the same paired normal-adenocarcinoma lung samples provides divergent biological information"
 author: "Sébastien Renaut (sebastien.renaut@criucpq.ulaval.ca)"
 date: "`r Sys.time()`"
 output:
@@ -39,8 +39,8 @@ nb_cells_per_sample = as.data.frame(table(metadata$unique),stringsAsFactors = F)
 
 # get data
 ```{r cellchat}
-#combined_permethodN = readRDS(file.path(params$datapath,'combined_permethod_pertypeN24.rds'))
-#combined_permethodT = readRDS(file.path(params$datapath,'combined_permethod_pertypeT24.rds'))
+combined_permethodN = readRDS(file.path(params$datapath,'combined_permethod_pertypeN24.rds'))
+combined_permethodT = readRDS(file.path(params$datapath,'combined_permethod_pertypeT24.rds'))
 
 combined_permethodN_sub = combined_permethodN
 combined_permethodT_sub = combined_permethodT
@@ -254,372 +254,12 @@ anova(lm(count~method+type+incoming+outcoming,data = out_final))
 
 
 
-
-pdf(file.path(params$datapath,'../results/Figures_August2023/cellchat/cellchat_tests.pdf'),width = 9,height = 12) 
-
-((((p_com[[1]]+p_com[[2]])/(p_com[[3]]+p_com[[4]])+ plot_layout(guide ='collect')) | stacked1) + plot_layout(width=c(8,1))) /
-  
-((plot_spacer() + netMHC) + plot_layout(width=c(8,1))) /
-((plot_spacer() + netPTPRM) + plot_layout(width=c(8,1))) 
-
-dev.off()
-
-+ plot_layout(heights=c(3,3,3))
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-333333
-
-netVisual_aggregate(cellchats[[1]], signaling = 'APP', layout = "circle", edge.width.max = 3, signaling.name = 'APP~cell (Normal)', edge.weight.max = getMaxWeight(cellchats, slot.name = c("netP"), attribute = 'APP'))
-netVisual_aggregate(cellchats[[2]], signaling = 'APP', layout = "circle", edge.width.max = 3, signaling.name = 'APP~nucleus (Normal)', edge.weight.max = getMaxWeight(cellchats, slot.name = c("netP"), attribute = 'APP'))
-netVisual_aggregate(cellchats[[3]], signaling = 'APP', layout = "circle", edge.width.max = 3, signaling.name = 'APP~cell (Tumor)', edge.weight.max = getMaxWeight(cellchats, slot.name = c("netP"), attribute = 'APP'))
-netVisual_aggregate(cellchats[[4]], signaling = 'APP', layout = "circle", edge.width.max = 3, signaling.name = 'APP~nucleus (Tumor)', edge.weight.max = getMaxWeight(cellchats, slot.name = c("netP"), attribute = 'APP'))
-
-netVisual_aggregate(cellchats[[1]], signaling = 'PTPRM', layout = "circle", edge.width.max = 3, signaling.name = 'APP~cell (Normal)', edge.weight.max = getMaxWeight(cellchats, slot.name = c("netP"), attribute = 'PTPRM'))
-netVisual_aggregate(cellchats[[2]], signaling = 'PTPRM', layout = "circle", edge.width.max = 3, signaling.name = 'APP~nucleus (Normal)', edge.weight.max = getMaxWeight(cellchats, slot.name = c("netP"), attribute = 'PTPRM'))
-netVisual_aggregate(cellchats[[3]], signaling = 'PTPRM', layout = "circle", edge.width.max = 3, signaling.name = 'APP~cell (Tumor)', edge.weight.max = getMaxWeight(cellchats, slot.name = c("netP"), attribute = 'PTPRM'))
-netVisual_aggregate(cellchats[[4]], signaling = 'PTPRM', layout = "circle", edge.width.max = 3, signaling.name = 'APP~nucleus (umor)', edge.weight.max = getMaxWeight(cellchats, slot.name = c("netP"), attribute = 'PTPRM'))
-#par(mfrow = c(1,2), xpd=TRUE)
-#draw(p7 + p8, ht_gap = unit(0.5, "cm"))
-
-
-
-
-#mergedcellchat_lev2 <- mergeCellChat(cellchats[c(3,4)], add.names =c('cell_NORMAL','cell_TUMOR'),cell.prefix = T)
-
-
-
-
-#nb of interactions
-p4=compareInteractions(mergedcellchat_normal_CellNucleus, show.legend = F,group = c(1,2))
-p5=compareInteractions(mergedcellchat_lev2, show.legend = F,measure = 'weight',group = c(1,2))
-
-
-#compare 
-p6_temp <- rankNet(mergedcellchat, mode = "comparison", stacked = T, do.stat = TRUE,return.data = T,comparison = c(1,2,3,4))
-
-
-#new order
-data = p6_temp$signaling.contribution
-p.adj = p.adjust(data$pvalues)
-data =data[p.adj<0.05,]
-pathway.signif = data[rownames(data)==data$name,]
-pathway.signif = rownames(pathway.signif)[order(pathway.signif$contribution,decreasing=F)]
-data$name =factor(data$name, levels = pathway.signif)
-data$group = factor(data$group,levels = c('cell_NORMAL','cell_TUMOR'))
-
-
-#
-p6 = ggplot(data, aes(fill=group, y=name, x=contribution.scaled)) + 
-    geom_bar(position="fill", stat="identity")+ xlab('Relative contribution\nto signal')
-
-#heat
-cellchats[[3]] = netAnalysis_computeCentrality(cellchats[[3]])
-cellchats[[4]] = netAnalysis_computeCentrality(cellchats[[4]])
-pathway.union <- union(cellchats[[3]]@netP$pathways,cellchats[[4]]@netP$pathways)
-#pathway.signif_reverse = pathway.signif[order(pathway.signif,decreasing=T)]
-p7 = netAnalysis_signalingRole_heatmap(cellchats[[3]], pattern = "all", signaling = rev(levels(data$name)), title = 'normal', width = 5, height = 15, color.heatmap = "OrRd")
-p8 = netAnalysis_signalingRole_heatmap(cellchats[[4]], pattern = "all", signaling = rev(levels(data$name)), title = 'tumor', width = 5, height = 15, color.heatmap = "OrRd")
-
-
-
-pdf(file.path(params$datapath,'../results/Figures_July2023/cellchat1.pdf'),width = 12,height = 6) 
-par(mfrow = c(1,3), xpd=TRUE)
-#networks
-p1= netVisual_circle(cellchats[[3]]@net$count, vertex.weight = as.numeric(table(cellchats[[3]]@idents)), weight.scale = T, label.edge= F, title.name = "Normal cell")
-p2= netVisual_circle(cellchats[[4]]@net$count, vertex.weight = as.numeric(table(cellchats[[4]]@idents)), weight.scale = T, label.edge= F, title.name = "Tumor cell")
-p3= netVisual_diffInteraction(mergedcellchat_lev2, weight.scale = T,comparison=c('cell_NORMAL','cell_TUMOR'),title= 'Normal minus Tumor Interactions')
-dev.off()
-
-#
-pdf(file.path(params$datapath,'../results/Figures_July2023/cellchat2.pdf'),width = 8,height = 6) 
-p4+p5+p6
-dev.off()
-
-#
-pdf(file.path(params$datapath,'../results/Figures_July2023/cellchat3.pdf'),width = 12,height = 15) 
-#par(mfrow = c(1,2), xpd=TRUE)
-draw(p7 + p8, ht_gap = unit(0.5, "cm"))
-dev.off()
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-###1
-pdf(file.path(params$datapath,'../results/Figures_July2023/cellchat1.pdf'),width = 12,height = 6) 
-par(mfrow = c(1,3), xpd=TRUE)
-#cellN
-netVisual_circle(cellchats[[1]]@net$count, vertex.weight = as.numeric(table(cellchats[[1]]@idents)), weight.scale = T, label.edge= F, title.name = "Normal cell")
-#cellT
-netVisual_circle(cellchats[[2]]@net$count, vertex.weight = as.numeric(table(cellchats[[2]]@idents)), weight.scale = T, label.edge= F, title.name = "Tumor cell")
-#N-T differences
-netVisual_diffInteraction(mergedcellchat, weight.scale = T,comparison=c('cell_NORMAL','cell_TUMOR'),title= 'Normal minus Tumor Interactions')
-#diff number
-dev.off()
-
-###2
-pdf(file.path(params$datapath,'../results/Figures_July2023/cellchat2.pdf'),width = 12,height = 6) 
-plot_comp = compareInteractions(mergedcellchat, show.legend = F,group = c(1,2))
-#diff weight
-plot_comp_w = compareInteractions(mergedcellchat, show.legend = F,measure = 'weight',group = c(1,2))
-#inter
-plot_rank = rankNet(mergedcellchat, mode = "comparison", stacked = T, do.stat = T,comparison = c(1,2))
-plot_rank_W = rankNet(mergedcellchat, mode = "comparison", stacked = F, do.stat = T,comparison = c(1,2))
-plot_comp | plot_comp_w | plot_rank | plot_rank_W
-dev.off()
-
-###3 
-pdf(file.path(params$datapath,'../results/Figures_July2023/cellchat3.pdf'),width = 12,height = 6) 
-par(mfrow = c(1,2), xpd=TRUE)
-netVisual_aggregate(cellchats[[1]], signaling = 'MHC-II', layout = "circle",signaling.name= 'MHC-II ~ cell')
-netVisual_aggregate(cellchats[[3]], signaling = 'MHC-II', layout = "circle",signaling.name= 'MHC-II ~ tumor')
-dev.off()
-
-
-
-
-
-
-# show all the significant interactions (L-R pairs) associated with certain signaling pathways
-# show all the significant signaling pathways from some cell groups (defined by 'sources.use') to other cell groups (defined by 'targets.use')
-netVisual_chord_gene(cellchats[[1]], sources.use = c(1,2), targets.use = c(3), slot.name = "netP", legend.pos.x = 10)
-
-
-
-
-
-
-
-
-
-###plot all the pathwayws HERE yeah!!!!
-x = netVisual_aggregate(cellchats[[1]], signaling = 'NOTCH', layout = "circle")
-x = netVisual_aggregate(cellchats[[2]], signaling = 'NOTCH', layout = "circle")
-
-
-
-p1 = compareInteractions(mergedcellchat, show.legend = F, group = c(1,2))
-p2 = compareInteractions(mergedcellchat, show.legend = F, group = c(1,2),measure = 'weight')
-
-par(mfrow = c(1,2), xpd=TRUE)
-p3=netVisual_diffInteraction(mergedcellchat, weight.scale = T)
-p4=netVisual_diffInteraction(mergedcellchat, weight.scale = T, measure = "weight")
-
-
-p5 <- netVisual_heatmap(mergedcellchat)
-#> Do heatmap based on a merged object
-p6 <- netVisual_heatmap(mergedcellchat, measure = "weight")
-#> Do heatmap based on a merged object
-p5 + p6
-
-
-#compare datasets
-gg1 <- rankNet(mergedcellchat, mode = "comparison", stacked = T, do.stat = TRUE)
-gg2 <- rankNet(mergedcellchat, mode = "comparison", stacked = F, do.stat = TRUE)
-gg1 + gg2
-
-```
-# real data  
-```{r cellchat}
-# Here we load a scRNA-seq data matrix and its associated cell meta data
-cellchats = list()
-
-types = c('Epithelial','Immune')
-tissue = c('normal','tumor')
-for(i in c(1,2)){ #normal, tumor
-  for(j in seq_along(types)){
-    
-#data.input = GetAssayData(cellchat_dataset[[i]]) # normalized data matrix
-if(i == 1) seurat.object = combined_permethodN[[1]]    
-if(i == 2) seurat.object = combined_permethodT[[1]]     
-
-#seurat.object = seurat.objects[[10]]
-
-data.input = seurat.object@assays$SCT
-meta = seurat.object@meta.data # a dataframe with rownames containing cell mata data
-cell.use = rownames(meta) # extract the cell names from disease data
-#cell.use = rownames(meta)[meta$predicted.ann_level_1 == types[j]] # extract the cell names from disease data
-
-
-# Prepare input data for CelChat analysis
-data.input = data.input[, cell.use]
-meta = meta[cell.use, ]
-
-meta$seurat_clusters2 = paste('cluster',meta$seurat_clusters)
-
-#meta$seurat_clusters2[meta$seurat_clusters=='7'] = 'c7_tumor_epi'
-
-#create cellchat dataset
-group.by = 'predicted.ann_level_2'
-cellchat <- createCellChat(object = data.input, meta = meta, group.by = group.by)
-cellchat <- addMeta(cellchat, meta = meta)
-cellchat <- setIdent(cellchat, ident.use = group.by)
-
-#set-up DB
-CellChatDB <- CellChatDB.human #
-#dplyr::glimpse(CellChatDB$interaction)
-
-# set the used database in the object
-#CellChatDB.use <- subsetDB(CellChatDB, search = "Secreted Signaling")
-CellChatDB.use <- subsetDB(CellChatDB, search = "Cell-Cell Contact")
-#CellChatDB.use = CellChatDB
-cellchat@DB <- CellChatDB.use
-
-#subset
-cellchat <- subsetData(cellchat) 
-#future::plan("multiprocess", workers = 4) # do parallel
-
-#expresion
-cellchat <- identifyOverExpressedGenes(cellchat)
-cellchat <- identifyOverExpressedInteractions(cellchat)
-
-#compute network
-cellchat <- computeCommunProb(cellchat,trim=0.1,type= 'truncatedMean')
-cellchat <- filterCommunication(cellchat, min.cells = 10)
-cellchat <- aggregateNet(cellchat)
-
-cellchats[[(i*2)-2 + j]] = cellchat
-
-print(paste0('Done sample ',tissue[i], ' for ',types[j],' cells, Time is:',Sys.time()))
-}
-}
-```
-
-
-par(mfrow = c(1,2)) 
-a = netVisual_circle(cellchat_nuc@net$count, vertex.weight = as.numeric(table(cellchat_nuc@idents)), weight.scale = T, label.edge= F, title.name = "Number of interactions ~ Normal epithelial")
-b = netVisual_circle(cellchat_cell@net$count, vertex.weight = as.numeric(table(cellchat_cell@idents)), weight.scale = T, label.edge= F, title.name = "Number of interactions ~ Normal epithelial")
-
-
-```{r plots}
-#plot results
-par(mfrow = c(2,2)) 
-a=netVisual_circle(cellchats[[1]]@net$count, vertex.weight = as.numeric(table(cellchats[[1]]@idents)), weight.scale = T, label.edge= F, title.name = "Number of interactions ~ Normal epithelial")
-b= netVisual_circle(cellchats[[3]]@net$count, vertex.weight = as.numeric(table(cellchats[[3]]@idents)), weight.scale = T, label.edge= F, title.name = "Number of interactions ~ Tumor epithelial")
-c=netVisual_circle(cellchats[[2]]@net$count, vertex.weight = as.numeric(table(cellchats[[2]]@idents)), weight.scale = T, label.edge= F, title.name = "Number of interactions ~ Normal Immune")
-d=netVisual_circle(cellchats[[4]]@net$count, vertex.weight = as.numeric(table(cellchats[[4]]@idents)), weight.scale = T, label.edge= F, title.name = "Number of interactions ~ Normal Immune")
-
-#groupSize <- as.numeric(table(cellchat@idents))
-pdf(file.path(params$datapath,'../results/FigX_ligand_receptor.pdf'),width = 12,height = 7) 
-
-#a;b;c;d
-dev.off()
-#netVisual_aggregate(cellchat, signaling = "CXCL", layout = "chord")
-
+# session info  
+```{r session, message= T}
+###session
+sessionInfo()
 ```
 
 
 
-
-
-
-
-
-
-
-```{r plots}
-for(i in 1:12){
-  data = GetAssayData(seurat.objects[[i]],slot = 'data')
-  meta = seurat.objects[[i]]@meta.data
-  rm = rowMeans(data)
-  print(head(data[order(rm,decreasing=T),1:5],5))
-}
-
-
-
-seurat.object = combined_permethodN[[1]] 
-data = seurat.object@assays$RNA
-#data = GetAssayData(seurat.object,slot = 'data')
-meta = seurat.object@meta.data
-cd274  = data[rownames(data)== 'CD274',]
-cd274_expressed = meta$seurat_clusters[as.numeric(cd274)>0]
-table(cd274_expressed)/table(meta$seurat_clusters)
-
-
-
-
-malat1  = data[rownames(data)== 'MALAT1',]
-meta$malat1 = malat1[1,]
-
-combined_permethodN[[1]]@meta.data$malat1 = malat1[1,]
-data_summarised = meta %>% 
-      group_by(seurat_clusters) %>%
-      summarise(mea = mean(malat1),med = median(malat1),.groups='keep')
-
-print(data_summarised,n=22)
-
-```
 
